Fix: overflow: auto; remove

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -24,7 +24,6 @@
 
 .md_left {
 	min-height: 100%;
-	overflow: auto;
 	direction: rtl;
 }
 
